<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".flashscreen.FlashScreenActivity"
    android:theme="@style/FlashScreen">

    <ImageView
        android:id="@+id/uvceLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/uvce_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uvceLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/uvce"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uvceLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/v_sem_ise"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp" />


</RelativeLayout>