<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".uploads.PostAnnouncement">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:id="@+id/uvceLogo"
                android:src="@drawable/uvce_logo"
                android:layout_weight="1"
                android:contentDescription="@string/logo_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:text="@string/announcement"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/design_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35sp"
            android:text="@string/message"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_background"
            android:inputType="textMultiLine"
            android:padding="16sp"
            android:scrollbars="vertical"
            android:lines="8"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="16sp">

            <Button
                android:id="@+id/attachImage"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_image"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:background="@drawable/button_background"
                android:textStyle="bold"
                android:height="20sp"/>

            <Button
                android:id="@+id/attachFile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_file"
                android:layout_marginEnd="16sp"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:height="20sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_background"
            android:backgroundTint="#210791"
            android:layout_width="150sp"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="30sp"/>
    </LinearLayout>

</LinearLayout>