<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".uploads.UploadNotes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/uvceLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/uvce_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/upload_notes"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/design_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35sp"
            android:layout_marginTop="20sp"
            android:text="@string/select_subject"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sub_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30sp"
            android:background="@drawable/drop_down_background"
            android:popupBackground="@android:color/white"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35sp"
            android:layout_marginTop="15sp"
            android:text="@string/file_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/button_background"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            tools:ignore="LabelFor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="35sp"
                        android:layout_marginTop="15sp"
                        android:text="@string/choose_a_file"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/file_attach"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="35sp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:paddingHorizontal="25sp"
                        android:text="@string/click_here"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/uploadButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#210791"
                    android:layout_width="150sp"
                    android:text="@string/upload"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center|end"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:layout_marginEnd="30sp"/>
            </LinearLayout>

    </LinearLayout>


</LinearLayout>